plane work and web/css setup

--- a/react/ssoss/src/App.css
+++ b/react/ssoss/src/App.css
@@ -1,5 +1,26 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: #282c34;
+  color: #282c34;
+  fill: #282c34;
+  display: flex;
+  flex-direction: column;
+}
+
+#root
+{
+  text-align: center;
+  min-height: 100%;
+  max-height: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  background-color: #282c34;
+  color: #282c34;
+  fill: #282c34;
+
 }
 
 .App-logo {
@@ -9,19 +30,26 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    //animation: App-logo-spin infinite 20s linear;
+  }
+  #curveTop {
+    transform: rotate(180deg);
+    transform-origin: 237.5px 200px;
+  }
+  #curveTop1 {
+  }
+  #curveTop2 {
   }
 }
 
-.App-header {
+.body-content {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  
 }
 
 .App-link {
@@ -36,3 +64,124 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes translate-up {
+  0% {
+    scale: 0 1;
+    translate: 237.5px 0px;
+    animation-timing-function: ease;
+  }
+  60% {
+    scale: 1 1;
+    translate: 0px 0px;
+    animation-timing-function: linear;
+  }
+  100% {
+    scale: 1 1;
+    translate: 0px -50px;
+    animation-timing-function: ease;
+  }
+}
+
+@keyframes translate-down {
+  0% {
+    scale: 0 1;
+    translate: 237.5px 0px;
+    animation-timing-function: ease;
+  }
+  60% {
+    scale: 1 1;
+    translate: 0px 0px;
+    animation-timing-function: linear;
+  }
+  100% {
+    scale: 1 1;
+    translate: 0px 50px;
+    animation-timing-function: ease;
+  }
+}
+
+.Guideline {
+  height: 40vmin;
+  scale: 0;
+  margin: auto;
+  display: block;
+  pointer-events: none;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  stroke: darkorange;
+  stroke-width: .25em;
+}
+
+@keyframes expand-in {
+  from {
+    animation-timing-function: linear;
+    scale: 1 0;
+    opacity: 0;
+  }
+  to {
+    scale: 1 1;
+    opacity: 1;
+    animation-timing-function: ease;
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .S {
+    scale: 0 0;
+    animation: expand-in .7s ease 2.3s 1;
+    animation-fill-mode: forwards;
+    transform-origin: 237.5px 200px;
+
+  }
+  .curve {
+    scale: 0 0;
+    animation: expand-in .7s ease 2.3s 1;
+    animation-fill-mode: forwards;
+    transform-origin: 237.5px 200px;
+  }
+
+  #GuidelineTop {
+    animation: translate-up 2s ease 1s 1;
+    animation-fill-mode: forwards;
+  }
+  #GuidelineBottom {
+    animation: translate-down 2s ease 1s 1;
+    animation-fill-mode: forwards;
+  }
+}
+
+header {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  max-height: 40vh;
+
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+#title {
+  max-height: 50vh;
+}
+
+footer {
+  width: 100%;
+  bottom: 0;
+  position: fixed;
+}
+
+#copyright
+{
+  overflow: hidden;
+  overflow-wrap: normal;
+  min-width: 25em;
+  display: block;
+  color: darkgray;
+}
+
+
+
+
